@@ -1,4 +1,5 @@
 2.2.6
+ * Add cassandra-stress keystore option (CASSANDRA-9325)
  * Fix use of NullUpdater for 2i during compaction (CASSANDRA-11450)
  * Notify when sstables change after cancelling compaction (CASSANDRA-11373)
  * cqlsh: COPY FROM should check that explicit column names are valid (CASSANDRA-11333)
